--- a/mb/index.html
+++ b/mb/index.html
@@ -56,6 +56,33 @@
             <li><a class="button  button--blue" href="#">Регистрация</a></li>
             <!-- <li></li> -->
           </ul>
+          <div class="nav__register  nav__register--closed">
+            <ul class="nav__choise">
+              <li><a class="nav__active" href="#">Войти</a></li>
+              <li><a href="#">Регистрация</a></li>
+            </ul>
+            <div class="nav__log">
+              <form>
+                <input type="email" placeholder="E-mail">
+                <input type="password" placeholder="Пароль">
+                <button type="submit">Войти</button>
+                <a href="#">Забыли пароль?</a>
+              </form>
+            </div>
+            <div class="nav__reg">
+              <form>
+                <input type="text" placeholder="Имя">
+                <input type="text" placeholder="Фамилия">
+                <input type="email" placeholder="E-mail">
+                <input type="password" placeholder="Пароль">
+                <label>
+                  <input type="checkbox">
+                  Я принимаю <a href="#">"Положения и условия"</a> и подтверждаю, что мне 18 лет или больше.
+                </label>
+                <button type="submit">Регистрация</button>
+              </form>
+            </div>
+          </div>
         </div>
       </div> 
       <div class="nav__container  nav--closed  nav--index">
