--- a/mb/training/assets.html
+++ b/mb/training/assets.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Indicators - MasterBinary</title>
+  <title>Assets - MasterBinary</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
@@ -91,11 +91,12 @@
   <section class="indicators__controll">
     <div class="container">
       <ul>
-        <li>Какие индикаторы вас интерисуют?</li>
+        <li>Какие активы вас интерисуют?</li>
         <li><a class="indicators__all" href="#">Все</a></li>
-        <li><a class="indicators__trend" href="#">Трендовые</a></li>
-        <li><a class="indicators__oscc" href="#">Осцилляторы</a></li>
-        <li><a class="indicators__psyho" href="#">Психологические</a></li>
+        <li><a class="indicators__currency" href="#">Валютные пары</a></li>
+        <li><a class="indicators__stock" href="#">Акции</a></li>
+        <li><a class="indicators__index" href="#">Индексы</a></li>
+        <li><a class="indicators__item" href="#">Товары</a></li>
       </ul>
     </div>
   </section>
@@ -104,7 +105,7 @@
       <ul>
         <li><a href="#">Главная</a></li>/
         <li><a href="#">Обучение</a></li>/
-        <li>Индикаторы</li>
+        <li>Активы</li>
       </ul>
     </div>
   </section>
@@ -112,91 +113,100 @@
     <header>
       <div class="container  container--big">
         <div class="indicators__filtr">
-          <h2>Трендовые</h2>
-          <h2>Индикаторы</h2>
+          <h2>Валюты</h2>
+          <h2>Активы</h2>
           <button class="indicators__button">Фильтры</button>
           <ul class="indicators__menu  indicators--closed">
-            <li><a href="#">Трендовые</a></li>
-            <li><a href="#">Осцилляторы</a></li>
-            <li><a href="#">Психологические</a></li>
+            <li><a href="#">Валютные пары</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Индексы</a></li>
+            <li><a href="#">Товары</a></li>
             <li><a href="#">Все</a></li>
           </ul>
         </div>
       </div>
     </header>
     <div class="container  container--big">
-      <div class="indicators__flex  indicators__flex--trend">
+      <div class="indicators__flex  indicators__flex--currency">
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
       </div>
-      <div class="indicators__flex  indicators__flex--second  indicators__flex--trend">
+      <div class="indicators__flex  indicators__flex--second  indicators__flex--currency">
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img.jpg" alt="">
+          <img src="../img/assets-bit.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
-            <p>Тип: Трендовые <span></span></p>
+            <p>Актив: Валюты <span></span></p>
+            <p>Пара USD/JPY представляет собой стоимость доллара США, выраженную в японских йенах.Каждая из стран, национальная валюта которых...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
@@ -213,82 +223,90 @@
   <section class="indicators  indicators--oscc">
     <header>
       <div class="container  container--big">
-        <h2>Осцилляторы</h2>
+        <h2>Акции</h2>
       </div>
     </header>
     <div class="container  container--big">
-      <div class="indicators__flex  indicators__flex--oscc">
+      <div class="indicators__flex  indicators__flex--currency  indicators__flex--stock">
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
       </div>
-      <div class="indicators__flex  indicators__flex--second  indicators__flex--oscc">
+      <div class="indicators__flex  indicators__flex--second  indicators__flex--currency  indicators__flex--stock">
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
             <p>Тип: Осцилляторы <span></span></p>
+            <p>Сегодня акции крупнейших мировых компаний, которые торгуются на биржевых площадках, являются весьма привлекательным активом для трейдеров, работающих с бинарными опционами. Ценные бумаги прогнозировать легче...</p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
@@ -302,34 +320,25 @@
       </ul>
     </div>
   </section>
-  <section class="indicators  indicators--psyho">
+  <!-- <section class="indicators  indicators--psyho">
     <header>
       <div class="container  container--big">
-        <h2>Психологические</h2>
+        <h2>Индексы</h2>
       </div>
     </header>
     <div class="container  container--big">
       <div class="indicators__flex  indicators__flex--psyho">
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
-            <b>Канал Дончиана – полезное дополнение к любой ТС</b>
+            <b>Торговля активом Bitcoin</b>
             <hr>
             <p>Тип: Психологические <span></span></p>
             <a class="indicators__link" href="#">Подробнее</a>
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
-          <div class="indicators__content">
-            <b>Обзор индикатора Gator Oscillator</b>
-            <hr>
-            <p>Тип: Психологические <span></span></p>
-            <a class="indicators__link" href="#">Подробнее</a>
-          </div>
-        </div>
-        <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
@@ -338,7 +347,16 @@
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
+          <div class="indicators__content">
+            <b>Обзор индикатора Gator Oscillator</b>
+            <hr>
+            <p>Тип: Психологические <span></span></p>
+            <a class="indicators__link" href="#">Подробнее</a>
+          </div>
+        </div>
+        <div class="indicators__box">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
@@ -349,7 +367,7 @@
       </div>
       <div class="indicators__flex  indicators__flex--second  indicators__flex--psyho">
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
@@ -358,7 +376,7 @@
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
@@ -367,7 +385,7 @@
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
@@ -376,7 +394,7 @@
           </div>
         </div>
         <div class="indicators__box">
-          <img src="../img/indicators-img-2.jpg" alt="">
+          <img src="../img/assets-apple.png" alt="">
           <div class="indicators__content">
             <b>Обзор индикатора Gator Oscillator</b>
             <hr>
@@ -393,7 +411,7 @@
         <li><a href="#">></a></li>
       </ul>
     </div>
-  </section>
+  </section> -->
   <footer class="footer">
     <div class="container">
       <div class="footer__payment">
