--- a/mb/training/strategy.html
+++ b/mb/training/strategy.html
@@ -57,6 +57,33 @@
               </li>
             </ul>
           </div>
+          <div class="nav__register  nav__register--closed">
+            <ul class="nav__choise">
+              <li><a class="nav__active" href="#">Войти</a></li>
+              <li><a href="#">Регистрация</a></li>
+            </ul>
+            <div class="nav__log">
+              <form>
+                <input type="email" placeholder="E-mail">
+                <input type="password" placeholder="Пароль">
+                <button type="submit">Войти</button>
+                <a href="#">Забыли пароль?</a>
+              </form>
+            </div>
+            <div class="nav__reg">
+              <form>
+                <input type="text" placeholder="Имя">
+                <input type="text" placeholder="Фамилия">
+                <input type="email" placeholder="E-mail">
+                <input type="password" placeholder="Пароль">
+                <label>
+                  <input type="checkbox">
+                  Я принимаю <a href="#">"Положения и условия"</a> и подтверждаю, что мне 18 лет или больше.
+                </label>
+                <button type="submit">Регистрация</button>
+              </form>
+            </div>
+          </div>
         </div>
       </div> 
     </nav>
@@ -81,7 +108,7 @@
             Ищу
             <select>
               <option>среднесрочную</option>
-              <option>раткосрочную</option>
+              <option>краткосрочную</option>
               <option>долгосрочную</option>
               <option>любую</option>
             </select>
@@ -104,7 +131,7 @@
       </div>
     </div>
   </section>
-  <section class="breadcrumbs">
+  <section class="breadcrumbs  breadcrumbs--strategy">
     <div class="container  container--big">
       <div class="breadcrumbs__inner">
         <h1>Стратегии</h1>
@@ -112,6 +139,38 @@
           <li><a href="#">Главная</a></li>/
           <li><a href="#">Обучение</a></li>/
           <li>Стратегии</li>
+        </ul>
+        <button class="breadcrumbs__filter">Фильтр</button>
+        <ul class="breadcrumbs__list  breadcrumbs__list--closed">
+          <li>
+            <b>Уровень сложности</b>
+            <select>
+              <option class="filters__begin">Начинающий</option>
+              <option>Уверенный</option>
+              <option>Опытный</option>
+              <option>Любой</option>
+            </select>
+          </li>
+          <li>
+            <b>Тип стратегии</b>
+            <select>
+              <option>Cреднесрочная</option>
+              <option>Краткосрочная</option>
+              <option>Долгосрочная</option>
+              <option>Любая</option>
+            </select>
+          </li>
+          <li>
+            <b>Тип актива торговли</b>
+            <select>
+              <option>Валютными парами</option>
+              <option>Крипто валютой</option>
+              <option>Акциями</option>
+              <option>Идексами</option>
+              <option>Товарами</option>
+              <option>Любые</option>
+            </select>
+          </li>
         </ul>
       </div>
     </div>
@@ -624,6 +683,6 @@
       <script src="js/range.js"></script> -->
       <!-- <script src="js/time.js"></script> -->
       <script src="../js/mobile-menu.js"></script>
-      <!-- <script src="../js/filter-menu.js"></script> -->
+      <script src="../js/strategy-menu.js"></script>
 </body>
 </html>
