--- a/mb/index.html
+++ b/mb/index.html
@@ -58,8 +58,8 @@
           </ul>
           <div class="nav__register  nav__register--closed">
             <ul class="nav__choise">
-              <li><a class="nav__active" href="#">Войти</a></li>
-              <li><a href="#">Регистрация</a></li>
+              <li><a class="nav__l  nav__active" href="#">Войти</a></li>
+              <li><a class="nav__r" href="#">Регистрация</a></li>
             </ul>
             <div class="nav__log">
               <form>
