--- a/mb/training/assets.html
+++ b/mb/training/assets.html
@@ -59,8 +59,8 @@
           </div>
           <div class="nav__register  nav__register--closed">
             <ul class="nav__choise">
-              <li><a class="nav__active" href="#">Войти</a></li>
-              <li><a href="#">Регистрация</a></li>
+              <li><a class="nav__l  nav__active" href="#">Войти</a></li>
+              <li><a class="nav__r" href="#">Регистрация</a></li>
             </ul>
             <div class="nav__log">
               <form>
