--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -26,10 +26,17 @@
           <div class="header__flex">
             <img class="header__logo" src="img/logo.svg" alt="Forex24 Global">
             <ul class="header__user">
-              <li><a class="header__open" href="#">Open account</a></li>
+              <li>
+                <a class="header__open" href="#">Open account</a>
+                <ul class="header__accounts  header__accounts--closed">
+                  <li><a href="#">Live</a></li>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">ZuluTrade</a></li>
+                </ul>
+              </li>
               <li><a href="#">Log in</a></li>
               <li>
-                <select class="header__support">
+                <select class="header__language">
                   <option>En</option>
                   <option>Ru</option>
                 </select>
