--- a/option/index.html
+++ b/option/index.html
@@ -93,6 +93,11 @@
     </div>
     <div class="footer__wrapper  footer__wrapper--text">
       <div class="container">
+        <div class="footer__right  footer__right--text">
+          <b>Скачать</b>
+          <a href="#"></a>
+          <a href="#"></a>
+        </div>
         <p><span>Информация о компании:</span> Данный вебсайт (<a href="https://www.24option.com/international">www.24option.com/international</a>) управляется Richfield Capital Limited, инвестиционная фирма в Белизе, полномочной и регулируемой Международной комиссией по финансовым услугам Белиза, номер лицензии (IFSC/60/440/TS/1517). Richfield Capital Limited располагается по адресу 5 Cork Street, город Белиз, Белиз.</p>
         <p>Согласно соглашению о платежных услугах между Richfield Capital Limited и Wonderbridge Services Limited, Wonderbridge Services Limited действует как платежный агент, предоставляющий платежные услуги Richfield Capital Limited.</p>
         <p>Предупреждение о риске: Контракты на разницу (‘CFD) являются сложным финансовым инструментом спекулятивного характера, торговля которым влечет за собой существенный риск потери капитала. Торговля CFD, являющимися маржовыми продуктами, может привести к потере всего инвестированного капитала. Помните, что леверидж в CFD может работать в обе стороны, и быть как преимуществом, так и недостатком. Трейдеры CFD не приобретают и не имеют никаких прав на базовые активы. Торговля бинарными опционами и CFD подходит не для всех инвесторов. Предыдущие успехи не являются гарантией будущих результатов. Прогнозы не являются надежным показателем будущих результатов. Перед торговлей вам следует внимательно рассмотреть свои инвестиционные цели, уровень опыта и толерантности к риску. Не следует вкладывать больше, чем вы можете позволить себе потерять. Пожалуйста, убедитесь, что вы полностью понимаете риски, связанные с выбранным продуктом и в случае необходимости можете обратиться за консультацией. Прочитайте, пожалуйста, наше <a href="#">Предупреждение о рисках</a>.</p>
