--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -64,6 +64,7 @@
         <input type="email" name="Email" placeholder="Email">
         <button type="submit" name="Submit">Create account</button>
       </form>
+      <button class="title__down"></button>
     </div>
   </section>
   <section class="welcome">
@@ -71,9 +72,8 @@
       <div class="welcome__flex">
         <img src="img/welcome-mockup.png" alt="Mockup">
         <div class="welcome__content">
-          <h1 class="welcome__name">Welcome to <span>Forex24</span></h1>
-          <b class="welcome__sub-name">Your home for online Forex and CFD trading</b>
-          <p class="welcome__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem.</p>
+          <h1 class="welcome__name">Multi-Platform Trading</h1>
+          <p class="welcome__text">MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use. It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
           <a class="welcome__button" href="#">Create account</a>
         </div>
       </div>
@@ -184,6 +184,39 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="license">
+    <div class="container">
+      <h1 class="license__name">Regulated and Licensed</h1>
+      <ul class="license__list">
+        <li><b>CySEC</b> – CySEC authorised and regulated under licence number 300/16</li>
+        <li><b>MiFID</b> – As a regulated investment firm within the EU, we follow the Markets in Financial Instruments Directive (MiFID), which aims to improve market transparency and protect investors.</li>
+        <li><b>I.C.F</b> – We are a member of the Investor Compensation Fund, which is an additional protection for Covered Clients who can make a claim if the company ever stops fulfilling its obligations.</li>
+      </ul>
+        <hr>
+      <div class="license__flex">
+        <div class="license__box  license__box--1">
+          <b>Low Spreads &<br>Competitive Pricing</b>
+            <hr>
+          <p>Forex24 Global has very low spreads and a competitive pricing model for all trading accounts. This is possible by having a deep and varied liquidity pool with tier 1 banks and top finance institutional companies.</p>
+        </div>
+        <div class="license__box  license__box--2">
+          <b>Transparent &<br>Trustworthy</b>
+            <hr>
+          <p>As an STP (Straight Through Processing) broker, we do not have any conflict of interest regarding our clients’ trades, as we only receive commission on the volume of the trades and do not benefit in any additional way by any client losses. We aim to give you the best possible service to help boost your trading experience with us.</p>
+        </div>
+        <div class="license__box  license__box--3">
+          <b>Safety of<br>Funds</b>
+            <hr>
+          <p>Your funds are kept in segregated accounts and we use encryption tools to keep all of your transaction data safe and secure. The company offers Negative Balance Protection.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="quote">
+    <div class="container">
+      <p>“Investing is laying out money now<br>to get more money back in the future.”<br><span>Warren Buffet</span></p>
     </div>
   </section>
   <section class="form">
@@ -477,7 +510,7 @@
             <img class="footer__logo" src="img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
-            <a class="footer__callme" href="#">Call me</a>
+            <a class="footer__callme" href="#">Call us</a>
           </li>
           <li class="footer__social">
             <a class="footer__link  footer__link--fb" href="#"></a>
@@ -531,6 +564,6 @@
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 </html>
