--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="description" content="Forex24 is a European CySEC Regulated online broker providing contracts for difference on foreign exchange, shares, futures and precious metals primarily to retail clients.">
   <title>Forex24 Global</title>
   <link rel="stylesheet" href="css/style.min.css">
   <!-- Favicon -->
@@ -13,8 +13,8 @@
   <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
+  <meta name="msapplication-config" content="browserconfig.xml">
   <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#2f2861">
-  <meta name="msapplication-TileColor" content="#2f2861">
   <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#5a21ed">
 </head>
@@ -25,6 +25,7 @@
         <div class="header__container">
           <div class="header__flex">
             <img class="header__logo" src="img/logo.svg" alt="Forex24 Global">
+            <button class="header__toggle">Open Menu</button>
             <ul class="header__user">
               <li>
                 <a class="header__open" href="#">Open account</a>
