--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -26,7 +26,7 @@
           <div class="header__flex">
             <img class="header__logo" src="img/logo.svg" alt="Forex24 Global">
             <button class="header__toggle">Open Menu</button>
-            <ul class="header__user">
+            <ul class="header__user  header__user--closed">
               <li>
                 <a class="header__open" href="#">Open account</a>
                 <ul class="header__accounts  header__accounts--closed">
@@ -44,7 +44,7 @@
               </li>
             </ul>
           </div>
-          <nav class="nav">
+          <nav class="nav  nav--closed">
             <ul class="nav__list">
               <li><a href="#">About</a></li>
               <li><a href="#">Trading</a></li>
