--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
 					<li>BEM</li>
 					<li>Flexbox</li>
 					<li>Bootstrap</li>
-					<li>Adobe Photoshop</li>
 					<li>Трансформация и анимация</li>
 					<li>Написание семантически верного кода</li>
 				</ul>
@@ -89,7 +88,8 @@
 				</ul>
 				<h3>Общее</h3>
 					<ul>
-					<li>Базовые знания <b>MySql</b> и <b>PHP</b></li>
+					<li>Adobe Photoshop</li>
+					<li>Базовые знания <b>MySql</b>, <b>PHP</b> и <b>WordPress</b></li>
 					<li>Использование системы контроля версий (GitHub)</li>
 					<li>Оптимизация (PageSpeed Insights)</li>
 				</ul>
