--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/MultiplyMarket.PNG" alt=""/>
+							<img src="assets/images/forexglobal" alt=""/>
 							<figcaption>
-								<h2>MultiplyMarket</h2>
-								<p><a href="https://multiplymarket.com/" class="work-a" target="_blank">Посмотреть</a></p>
+								<h2>Forex24Global</h2>
+								<p><a href="forexglobal/index.html" class="work-a" target="_blank">Посмотреть</a></p>
 							</figcaption>			
 						</figure>
 					</div>
@@ -152,10 +152,10 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/forex.PNG" alt=""/>
+							<img src="assets/images/MultiplyMarket.png" alt=""/>
 							<figcaption>
-								<h2>Forex24Global</h2>
-								<p><a href="forex/index.html" class="work-a" target="_blank">Посмотреть</a></p>
+								<h2>MultiplyMarket</h2>
+								<p><a href="https://multiplymarket.com/" class="work-a" target="_blank">Посмотреть</a></p>
 							</figcaption>			
 						</figure>
 					</div>
@@ -164,10 +164,10 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/plus.PNG" alt=""/>
+							<img src="assets/images/mb.png" alt=""/>
 							<figcaption>
-								<h2>+500Crypto</h2>
-								<p><a href="https://www.plus500crypto.com/" class="work-a" target="_blank">Посмотреть</a></p>
+								<h2>MasterBinary</h2>
+								<p><a href="mb/index.html" class="work-a" target="_blank">Посмотреть</a></p>
 							</figcaption>			
 						</figure>
 					</div>
@@ -259,31 +259,6 @@
 		      </div> 
 			  </div>         
     	</div>
-			<!-- <div class="row">
-				<div class="col-xs-12 col-sm-4 col-md-4">
-					<div class="grid wow zoomIn">
-						<figure class="effect-bubba">
-							<img src="assets/images/vkroke.PNG" alt=""/>
-							<figcaption>
-								<h2>VKroke</h2>
-								<p><a href="https://github.com/revcheg/VKroke" class="work-a" target="_blank">Посмотреть на GitHub</a></p>
-							</figcaption>			
-						</figure>
-					</div>
-				</div>
-				
-				<div class="col-xs-12 col-sm-4 col-md-4">
-	      	<div class="grid wow zoomIn">
-	          <figure class="effect-bubba">
-	            <img src="assets/images/VS.PNG" alt="">
-	            <figcaption>
-                <h2>Виктория <span>Сервис</span></h2>
-                <p><a href="vs/index.html" class="work-a" target="_blank">Посмотреть</a>
-	            </figcaption>			
-	          </figure>
-	        </div>
-	      </div>
-			</div> -->
 		</div>
 	</section>
 	<!-- Конец работ -->
