--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/TGI.PNG" alt=""/>
+							<img src="assets/images/TGI.png" alt=""/>
 							<figcaption>
 								<h2>TGI</h2>
 								<p><a href="tgi/index-ru.html" class="work-a" target="_blank">Посмотреть</a></p>
@@ -126,7 +126,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/BeBrokers.PNG" alt=""/>
+							<img src="assets/images/BeBrokers.png" alt=""/>
 							<figcaption>
 								<h2>BeBrokers</h2>
 								<p><a href="https://be-brokers.com/" class="work-a" target="_blank">Посмотреть</a></p>
@@ -176,7 +176,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/miner.PNG" alt=""/>
+							<img src="assets/images/miner.png" alt=""/>
 							<figcaption>
 								<h2>MainingCrypto</h2>
 								<p><a href="https://mainingcrypto.com/" class="work-a" target="_blank">Посмотреть</a></p>
@@ -189,7 +189,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/sedona.PNG" alt=""/>
+							<img src="assets/images/sedona.png" alt=""/>
 							<figcaption>
 								<h2>Sedona</h2>
 								<p><a href="sedona/index.html" class="work-a" target="_blank">Посмотреть</a></p>
@@ -201,7 +201,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/device.PNG" alt=""/>
+							<img src="assets/images/device.png" alt=""/>
 							<figcaption>
 								<h2>Device</h2>
 								<p><a href="device/index.html" class="work-a" target="_blank">Посмотреть</a></p>
@@ -213,7 +213,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 	        <div class="grid wow zoomIn">
             <figure class="effect-bubba">
-              <img src="assets/images/barber.PNG" alt=""/>
+              <img src="assets/images/barber.png" alt=""/>
               <figcaption>
                 <h2>Barber-<span>Shop</span></h2>
                 <p><a href="barber-shop/index.html" class="work-a" target="_blank">Посмотреть</a></p>
@@ -226,7 +226,7 @@
         <div class="col-xs-12 col-sm-4 col-md-4">
 	        <div class="grid wow zoomIn">
             <figure class="effect-bubba">
-              <img src="assets/images/active.PNG" alt=""/>
+              <img src="assets/images/active.png" alt=""/>
               <figcaption>
                 <h2>Active<span>Box</span></h2>
                 <p><a href="activebox/index.html" class="work-a" target="_blank">Посмотреть</a></p>
@@ -238,7 +238,7 @@
         <div class="col-xs-12 col-sm-4 col-md-4">
           <div class="grid wow zoomIn">
             <figure class="effect-bubba">
-              <img src="assets/images/tiny.PNG" alt=""/>
+              <img src="assets/images/tiny.png" alt=""/>
               <figcaption>
                 <h2>Tiny<span>One</span></h2>
                 <p><a href="tinyone/index.html" class="work-a" target="_blank">Посмотреть</a></p>
@@ -250,7 +250,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 		      <div class="grid wow zoomIn">
 	          <figure class="effect-bubba">
-              <img src="assets/images/alliance.PNG" alt=""/>
+              <img src="assets/images/alliance.png" alt=""/>
               <figcaption>
                 <h2>Alliance</h2>
                 <p><a href="alliance/index.html" class="work-a" target="_blank">Посмотреть</a></p>
