--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<figure class="effect-bubba">
-							<img src="assets/images/miner.png" alt=""/>
+							<img src="assets/images/miner.PNG" alt=""/>
 							<figcaption>
 								<h2>MainingCrypto</h2>
 								<p><a href="https://mainingcrypto.com/" class="work-a" target="_blank">Посмотреть</a></p>
